--- a/.codefresh/build.yml
+++ b/.codefresh/build.yml
@@ -72,7 +72,7 @@ steps:
       condition: 
         all: 
           noCiCdAuthor: 'includes("${{CF_COMMIT_MESSAGE}}", "Version Release") == false' 
-          masterBranch: '"${{CF_BRANCH}}" == "main"'
+          masterBranch: '"${{CF_BRANCH}}" == "master"'
     commands:
       - echo '//registry.npmjs.org/:_authToken=${NPM_TOKEN}' > ~/.npmrc
       - git config --global user.email "cicd@kubevious.io"
