--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "lint": "eslint"
   },
   "author": "Ruben Hakopian <ruben.hakopian@gmail.com>",
-  "license": "Propriatery",
+  "license": "Apache-2.0",
   "dependencies": {
-    "@kubevious/ui-framework": "^1.0.10",
-    "the-lodash": "^2.0.0",
-    "the-promise": "^2.0.4"
+    "@kubevious/ui-framework": "^1.0.11",
+    "the-lodash": "^2.0.7",
+    "the-promise": "^2.0.9"
   },
   "devDependencies": {
     "@types/mocha": "^8.0.3",
