--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   },
   "author": "Ruben Hakopian <ruben.hakopian@gmail.com>",
   "license": "Apache-2.0",
-  "dependencies": {
-    "@kubevious/ui-framework": "^1.0.40"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.6.0",
