--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "author": "Ruben Hakopian <ruben.hakopian@gmail.com>",
   "license": "Apache-2.0",
-  "dependencies": {},
+  "dependencies": {
+    "the-promise": "^2.0.13"
+  },
   "devDependencies": {
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.6.0",
