--- a/.codefresh/build.yml
+++ b/.codefresh/build.yml
@@ -43,7 +43,7 @@ steps:
     image: 'kubevious/node-builder:14'
     working_directory: "${{CICD_REPO_PATH}}"
     commands:
-      - npm ci
+      - yarn install --frozen-lockfile
 
   compile:
     title: Compile
