--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@kubevious/entity-meta": "^1.0.56",
+    "@kubevious/http-client": "^1.0.19",
     "the-promise": "^2.0.13"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
   },
   "resolutions": {
     "the-promise": "^2.0.13",
-    "@kubevious/entity-meta": "^1.0.56"
+    "@kubevious/entity-meta": "^1.0.56",
+    "@kubevious/http-client": "^1.0.19"
   }
 }
